--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .partner-pagination .swiper-pagination-bullet {
+        @apply w-3 h-3 bg-transparent border border-black;
+    }
+
+    .partner-pagination .swiper-pagination-bullet-active {
+        @apply bg-primary border-0;
+    }
+}
