Story component added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ html {
     }
 
     .heading-2 {
-        @apply font-normal text-5xl uppercase mb-4;
+        @apply font-normal text-5xl uppercase mb-7;
     }
 
     .heading-3 {
@@ -21,6 +21,10 @@ html {
 
     .layout-section-xl {
         @apply max-w-screen-xl mx-auto py-20;
+    }
+
+    .layout-section-lg {
+        @apply max-w-screen-lg mx-auto py-20;
     }
 }
 
