--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,15 +8,15 @@ html {
 
 @layer components {
     .heading-1 {
-        @apply uppercase text-center font-normal text-7xl leading-[80px] mb-4;
+        @apply uppercase text-center font-normal text-7xl leading-[80px] mb-4 font-big-noodle-titling;
     }
 
     .heading-2 {
-        @apply font-normal text-5xl uppercase mb-7;
+        @apply font-normal text-5xl uppercase mb-7 font-big-noodle-titling;
     }
 
     .heading-3 {
-        @apply font-normal text-4xl uppercase mb-4;
+        @apply font-normal text-4xl uppercase mb-4 font-big-noodle-titling;
     }
 
     .layout-section-xl {
