Initiatives list added on home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ html {
     }
 
     .layout-section-xl {
-        @apply max-w-screen-xl mx-auto py-20;
+        @apply max-w-[1200px] mx-auto py-20;
     }
 
     .layout-section-lg {
