--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,10 @@ html {
     .layout-section-lg {
         @apply max-w-screen-lg mx-auto px-5 xl:px-0 py-10 xl:py-20;
     }
+
+    .layout-section-sm {
+        @apply max-w-screen-sm mx-auto px-5 md:px-0 py-32;
+    }
 }
 
 @layer utilities {
