--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,8 +98,8 @@ html {
     transition: transform 0.7s ease-out, opacity 0.7s ease-out; 
   }
   
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 800px) {
     .custom-cursor{
-        cursor: none;
+        display: none;
     }
   }
